Aggiunge possibilità di visualizzare un profilo, compresa la possibilità di seguire e bannare altri utenti
