# doc/api.yaml
@@ -160,6 +160,30 @@ paths:
           description: The unban was successfully.
         "401": { $ref: "#/components/responses/Unauthorized" }
         "500": { $ref: "#/components/responses/InternalServerError" }
+    get:
+      tags:
+        - banned
+      operationId: getBan
+      summary: Get the ban of a user
+      description: It allow the user to know if there is a ban
+      responses:
+        "200":
+            description: Return the info about the specific ban
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    isAlreadyBanned:
+                      type: string
+                      example: "True"
+                      minLength: 3
+                      maxLength: 16
+                      pattern: '^.*?$'
+        "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/Unauthorized" }
+        "500": { $ref: "#/components/responses/InternalServerError" }
+      
 
   /profiles/{user_name}/followers/{following}:
     parameters:
@@ -396,7 +420,30 @@ paths:
         "400": { $ref: "#/components/responses/BadRequest" }
         "401": { $ref: "#/components/responses/Unauthorized" }
         "500": { $ref: "#/components/responses/InternalServerError" }
-  
+    get:
+      tags:
+        - likes
+      operationId: photoAlreadyLiked
+      summary: check if the photo is already liked
+      description: Allows you to know if the photo is already liked
+      responses:
+        "200":
+            description: Return the info about a specific like
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    isAlreadyLiked:
+                      type: string
+                      example: "True"
+                      minLength: 3
+                      maxLength: 16
+                      pattern: '^.*?$'
+        "400": { $ref: "#/components/responses/BadRequest" }
+        "401": { $ref: "#/components/responses/Unauthorized" }
+        "500": { $ref: "#/components/responses/InternalServerError" }
+                      
   /profiles/{user_name}/photos/{photo_id}/comments: 
     parameters:
       - name: user_name
@@ -454,12 +501,18 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/user_name"
+                type: object
+                description: describe the id of the comment
+                properties:
+                  id:
+                    type: integer
+                    example: 301
+                    description: The comment id
         "400": { $ref: "#/components/responses/BadRequest" }
         "401": { $ref: "#/components/responses/Unauthorized" }
         "500": { $ref: "#/components/responses/InternalServerError" }
           
-  /profiles/{user_name}/photos/{photo_id}/comments/{user_who_commented}: 
+  /profiles/{user_name}/photos/{photo_id}/comments/{user_who_commented}/user_comments/{comment_id}: 
     parameters:
       - name: user_name
         in: path
@@ -491,6 +544,13 @@ paths:
           minLength: 3
           maxLength: 16
           pattern: '^.*?$'
+      - name: comment_id
+        in: path
+        description: The id of the comment we want to delete
+        required: true
+        schema:
+          type: integer
+          example: 301
     delete:
       tags:
         - comments
@@ -579,6 +639,29 @@ components:
           type: integer
           example: 50
           description: The number of photo's comments
+        comments:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                example: 301
+                description: The id of the comment
+              name:
+                type: string
+                example: Maria
+                pattern: '^.*?$'
+                minLength: 3
+                maxLength: 16
+                description: Describe the name of the user
+              comment:
+                type: string
+                example: Nice Photo!!
+                pattern: '^.*?$'
+                minLength: 3
+                maxLength: 100
+                description: Describe the comment text
     user_name:
       title: user_name
       description: describe a user_name
